tests/golden/compile-pass/trait_where_clause.rua
trait Named {
    fn name(&self) -> String;
}

fn label<T>(value: T) -> String
where
    T: Named,
{
    value.name()
}

fn main() {}
