tests/golden/compile-fail/trait_bound_unsatisfied.rua
trait Animal {
    fn speak(&self) -> String;
}

struct Cat {}

fn describe<T: Animal>(animal: T) {}

fn main() {
    describe(Cat {});
}
